dark mode fixes

--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -12,6 +12,9 @@
     --#{$variable-prefix}body-color: #{$dark-mode-text};
     --#{$variable-prefix}body-color-rgb: #{to-rgb($dark-mode-text)};
 
+    --#{$variable-prefix}body-bg: #{$dark-mode-darken};
+    --#{$variable-prefix}body-bg-rgb: #{to-rgb($dark-mode-darken)};
+
     --#{$variable-prefix}card-bg: #{$dark};
     --#{$variable-prefix}card-bg-rgb: #{to-rgb($dark)};
 
@@ -75,6 +78,10 @@
 
   .input-group-flat .input-group-text {
     background-color: $dark-mode-darken;
+  }
+
+  .input-group-text {
+    border-color: $dark-mode-lighten-10;
   }
 
   .highlight {
