--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -4,7 +4,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  border-color: rgba(var(--#{$variable-prefix}btn-color-text-rgb), #{$border-dark-opacity});
+  border-color: var(--#{$variable-prefix}border-color);
   white-space: nowrap;
 
   background-color: var(--#{$variable-prefix}btn-color, var(--#{$variable-prefix}card-bg));
