--- a/src/scss/ui/_forms.scss
+++ b/src/scss/ui/_forms.scss
@@ -57,7 +57,7 @@ Form control
  */
 .form-control {
   &:-webkit-autofill {
-    box-shadow: 0 0 0 1000px $white inset;
+    box-shadow: 0 0 0 1000px var(--tblr-body-bg) inset;
   }
 
   &:disabled,
